# HaGL

./: CHANGELOG.md  HaGL.cabal  LICENSE  README.md  cabal.project  hegl.cabal  prepare-images.py
doc/: Overview.md  prepare-images.py
examples/: HaGL-examples.cabal  Presentation.hs  Run.hs
examples/Graphics/HEGL/: Examples.hs
examples/Graphics/HEGL/Examples/: Common.hs  Images.hs  Manifolds.hs  Particles.hs  Simulations.hs  Spheres.hs
examples/Graphics/HaGL/: Examples.hs
examples/Graphics/HaGL/Examples/: Common.hs  Images.hs  Manifolds.hs  Particles.hs  Simulations.hs  Spheres.hs
examples/src/Graphics/HaGL/: Examples.hs
examples/src/Graphics/HaGL/Examples/: Images.hs  Manifolds.hs  Spheres.hs
lib/: HaGL-lib.cabal
lib/src/Graphics/HaGL/: Lib.hs
lib/src/Graphics/HaGL/Lib/: Math.hs  Objects3D.hs  Random.hs
src/Graphics/: HEGL.hs  HaGL.hs
src/Graphics/HEGL/: Backend.hs  CodeGen.hs  Eval.hs  ExprID.hs  GLAST.hs  GLAst.hs  GLExpr.hs  GLObj.hs  GLPrint.hs  GLType.hs  HostEval.hs  Internal.hs  Numerical.hs  Print.hs  Shader.hs  TH.hs  Util.hs
src/Graphics/HEGL/Backend/: GLUT.hs  Image.hs
src/Graphics/HEGL/Backends/: GLUT.hs  Image.hs
src/Graphics/HEGL/Lib/: Camera.hs  Image.hs  Math.hs  Mesh.hs  Objects3D.hs  Random.hs  Shading.hs
src/Graphics/HEGL/TH/: HEGL.hs
src/Graphics/HEGL/Util/: DepMap.hs  Types.hs
src/Graphics/HaGL/: Backend.hs  CodeGen.hs  Eval.hs  ExprID.hs  GLAst.hs  GLExpr.hs  GLObj.hs  GLType.hs  Internal.hs  Numerical.hs  Print.hs  Shader.hs  Util.hs
src/Graphics/HaGL/Backend/: GLUT.hs
src/Graphics/HaGL/Lib/: Camera.hs  Image.hs  Mesh.hs  Objects3D.hs  Random.hs  Shading.hs
src/Graphics/HaGL/TH/: HaGL.hs
src/Graphics/HaGL/Util/: DepMap.hs  Types.hs
tests/: Example.hs  Test.hs
tests/Graphics/HEGL/Test/: Host.hs  Shader.hs
