name:                HaGL
version:             0.1.0.0
synopsis:            Haskell-embedded OpenGL
description:         A simple, functional approach to 
                     OpenGL programming in Haskell.
                     .
                     All primitives and functions that comprise HaGL 
                     are contained in the top-level "Graphics.HaGL" module.
                     .
                     A small library of useful HaGL constructions is provided 
                     by "Graphics.HaGL.Lib". Examples demonstrating
                     usage can be found under "Graphics.HaGL.Examples".
homepage:            https://github.com/simeonkr/HaGL
license:             MIT
license-file:        LICENSE
author:              Simeon Krastnikov
maintainer:          skrastnikov@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/simeonkr/HaGL

library
  exposed-modules:
    Graphics.HaGL
    Graphics.HaGL.Internal
    Graphics.HaGL.Lib
    Graphics.HaGL.Lib.Image
    Graphics.HaGL.Lib.Math
    Graphics.HaGL.Lib.Camera
    Graphics.HaGL.Lib.Random
    Graphics.HaGL.Lib.Mesh
    Graphics.HaGL.Lib.Objects3D
    Graphics.HaGL.Lib.Shading
    Graphics.HaGL.Examples
    Graphics.HaGL.Examples.Common
    Graphics.HaGL.Examples.Images
    Graphics.HaGL.Examples.Particles
    Graphics.HaGL.Examples.Simulations
    Graphics.HaGL.Examples.Manifolds
    Graphics.HaGL.Examples.Spheres
  other-modules:
    Graphics.HaGL.TH.HaGL
    Graphics.HaGL.Util
    Graphics.HaGL.Util.Types
    Graphics.HaGL.Util.DepMap
    Graphics.HaGL.Numerical
    Graphics.HaGL.GLType
    Graphics.HaGL.GLExpr
    Graphics.HaGL.ExprID
    Graphics.HaGL.GLAst
    Graphics.HaGL.Print
    Graphics.HaGL.Eval
    Graphics.HaGL.GLObj
    Graphics.HaGL.Shader
    Graphics.HaGL.CodeGen
    Graphics.HaGL.Backend
    Graphics.HaGL.Backend.GLUT
  default-extensions:
    GADTs, 
    DataKinds, 
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns, 
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:       
    base,
    template-haskell,
    array,
    matrix,
    containers,
    unordered-containers,
    mtl,
    hashable,
    time,
    cryptohash-md5,
    OpenGL,
    OpenGLRaw,
    GLUT,
    bytestring,
    gl-capture,
    parsec
  hs-source-dirs:      src, examples
  default-language:    Haskell2010
  ghc-options: 
    -Wall 
    -fwarn-incomplete-patterns
    -Wno-missing-signatures
    -Wno-unticked-promoted-constructors
    -Wno-partial-type-signatures
    -Wno-name-shadowing

Test-Suite HaGL-test
  type: exitcode-stdio-1.0
  default-extensions:
    GADTs,
    DataKinds,
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:
    base,
    HaGL,
    HUnit,
    bytestring,
    directory,
    GLUT
  other-modules:
  hs-source-dirs: tests
  main-is: Test.hs
  default-language:    Haskell2010

executable run-example
  build-depends:
    base,
    directory,
    HaGL
  main-is: examples/Run.hs
