name:                HaGL
version:             0.1.0.0
synopsis:            Haskell-embedded OpenGL
description:         A simple, functional approach to 
                     OpenGL programming in Haskell.
                     .
                     All definitions that comprise HaGL are
                     provided by the top-level "Graphics.HaGL" module.
homepage:            https://github.com/simeonkr/HaGL
license:             MIT
license-file:        LICENSE
author:              Simeon Krastnikov
maintainer:          skrastnikov@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/simeonkr/HaGL

library
  exposed-modules:
    Graphics.HaGL
    Graphics.HaGL.Internal
  other-modules:
    Graphics.HaGL.TH.HaGL
    Graphics.HaGL.Util
    Graphics.HaGL.Util.Types
    Graphics.HaGL.Util.DepMap
    Graphics.HaGL.Numerical
    Graphics.HaGL.GLType
    Graphics.HaGL.GLExpr
    Graphics.HaGL.ExprID
    Graphics.HaGL.GLAst
    Graphics.HaGL.Print
    Graphics.HaGL.Eval
    Graphics.HaGL.GLObj
    Graphics.HaGL.Shader
    Graphics.HaGL.CodeGen
    Graphics.HaGL.Backend
    Graphics.HaGL.Backend.GLUT
  default-extensions:
    GADTs, 
    DataKinds, 
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns, 
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:       
    base,
    template-haskell,
    array,
    matrix,
    containers,
    unordered-containers,
    mtl,
    hashable,
    time,
    cryptohash-md5,
    OpenGL,
    OpenGLRaw,
    GLUT,
    bytestring,
    gl-capture
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: 
    -Wall 
    -fwarn-incomplete-patterns
    -Wno-missing-signatures
    -Wno-unticked-promoted-constructors
    -Wno-partial-type-signatures
    -Wno-name-shadowing

test-suite HaGL-test
  type: exitcode-stdio-1.0
  default-extensions:
    GADTs,
    DataKinds,
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:
    base,
    HaGL,
    HUnit,
    bytestring,
    directory,
    -- due to use of openGLSetup
    OpenGL,
    GLUT
  other-modules:
  hs-source-dirs: tests
  main-is: Test.hs
  default-language:    Haskell2010
