name:                hegl
version:             0.1.0.0
synopsis:            The Haskell-Embedded Graphics Language
-- description:
homepage:            https://github.com/simeonkr/hegl
license:             MIT
license-file:        LICENSE
author:              Simeon Krastnikov
maintainer:          skrastnikov@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files: README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/simeonkr/hegl

library
  exposed-modules:
    Graphics.HEGL,
    Graphics.HEGL.Internal,
    Graphics.HEGL.Lib.Math
    Graphics.HEGL.Examples
  other-modules:
    Graphics.HEGL.TH.HEGL
    Graphics.HEGL.Util
    Graphics.HEGL.Util.Types
    Graphics.HEGL.Util.DepMap
    Graphics.HEGL.Numerical
    Graphics.HEGL.GLType
    Graphics.HEGL.GLExpr
    Graphics.HEGL.ExprID
    Graphics.HEGL.GLAST
    Graphics.HEGL.Print
    Graphics.HEGL.Eval
    Graphics.HEGL.GLObj
    Graphics.HEGL.Shader
    Graphics.HEGL.CodeGen
    Graphics.HEGL.Backend.GLUT
    Graphics.HEGL.Backend.Image
  default-extensions:
    GADTs, 
    DataKinds, 
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns, 
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:       
    base,
    template-haskell,
    array,
    matrix,
    containers,
    unordered-containers,
    mtl,
    hashable,
    time,
    OpenGL,
    OpenGLRaw,
    GLUT
  hs-source-dirs:      src, examples
  default-language:    Haskell2010
  ghc-options: 
    -Wall 
    -fwarn-incomplete-patterns
    -Wno-missing-signatures
    -Wno-unticked-promoted-constructors

Test-Suite hegl-test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    HUnit,
    hegl
  hs-source-dirs: tests
  main-is: Test.hs
  default-language:    Haskell2010
