name:                hegl
version:             0.1.0.0
synopsis:            The Haskell-Embedded Graphics Language
-- description:
homepage:            https://github.com/simeonkr/hegl
license:             MIT
license-file:        LICENSE
author:              Simeon Krastnikov
maintainer:          skrastnikov@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files: README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/simeonkr/hegl

library
  exposed-modules:
    Graphics.HEGL,
    Graphics.HEGL.Internal,
    Graphics.HEGL.Lib.Image,
    Graphics.HEGL.Lib.Math,
    Graphics.HEGL.Lib.Random,
    Graphics.HEGL.Examples
    Graphics.HEGL.Examples.Images
  other-modules:
    Graphics.HEGL.TH.HEGL
    Graphics.HEGL.Util
    Graphics.HEGL.Util.Types
    Graphics.HEGL.Util.DepMap
    Graphics.HEGL.Numerical
    Graphics.HEGL.GLType
    Graphics.HEGL.GLExpr
    Graphics.HEGL.ExprID
    Graphics.HEGL.GLAst
    Graphics.HEGL.Print
    Graphics.HEGL.Eval
    Graphics.HEGL.GLObj
    Graphics.HEGL.Shader
    Graphics.HEGL.CodeGen
    Graphics.HEGL.Backend
    Graphics.HEGL.Backend.GLUT
  default-extensions:
    GADTs, 
    DataKinds, 
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns, 
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:       
    base,
    template-haskell,
    array,
    matrix,
    containers,
    unordered-containers,
    mtl,
    hashable,
    time,
    cryptohash-md5,
    OpenGL,
    OpenGLRaw,
    GLUT,
    bytestring,
    gl-capture
  hs-source-dirs:      src, examples
  default-language:    Haskell2010
  ghc-options: 
    -Wall 
    -fwarn-incomplete-patterns
    -Wno-missing-signatures
    -Wno-unticked-promoted-constructors
    -Wno-partial-type-signatures
    -Wno-name-shadowing

Test-Suite hegl-test
  type: exitcode-stdio-1.0
  default-extensions:
    GADTs,
    DataKinds,
    KindSignatures,
    TypeFamilies,
    TypeOperators,
    ViewPatterns,
    FlexibleContexts, 
    FlexibleInstances,
    PartialTypeSignatures
  build-depends:
    base,
    hegl,
    HUnit,
    bytestring,
    directory,
    GLUT
  other-modules:
  hs-source-dirs: tests
  main-is: Test.hs
  default-language:    Haskell2010
