name:                HaGL-examples
version:             0.0.5.0
synopsis:            Haskell-embedded OpenGL: Supporting examples
description:         Examples demonstrating features of HaGL
homepage:            https://github.com/simeonkr/HaGL
license:             MIT
license-file:        LICENSE
author:              Simeon Krastnikov
maintainer:          skrastnikov@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/simeonkr/HaGL
  subdir:   examples

library
  exposed-modules:
    Graphics.HaGL.Examples
    Graphics.HaGL.Examples.Common
    Graphics.HaGL.Examples.Images
    Graphics.HaGL.Examples.Particles
    Graphics.HaGL.Examples.Simulations
    Graphics.HaGL.Examples.Manifolds
    Graphics.HaGL.Examples.Spheres
  default-extensions:
    GADTs, 
    DataKinds, 
    ViewPatterns,
    FlexibleContexts
  build-depends:       
    base,
    HaGL,
    HaGL-lib
  hs-source-dirs:      src
  default-language:    Haskell2010

executable run-example
  build-depends:
    base,
    directory,
    HaGL,
    HaGL-lib,
    HaGL-examples,
     -- due to use of openGLSetup
    OpenGL
  main-is: Run.hs
  default-language:    Haskell2010
